<resources>
    <string name="app_name">MandelbrotSetVisualizer</string>
    <string name="CENTER_REAL_TEXT">Real coordinate</string>
    <string name="CENTER_IMAG_TEXT">Imaginary coordinate</string>
    <string name="EDGE_LENGTH_TEXT">Edge Length</string>
    <string name="ITERATION_LIMIT_TEXT">Iteration limit</string>
    <string name="FRAME_RATE_TEXT">Frames Per Second</string>
    <string name="RECORD_TIME_TEXT">Duration</string>
    <string name="NUM_FRAMES_TEXT">Total Frames</string>
    <string name="FORWARD_BUTTON_TEXT">Forward</string>
    <string name="BACK_BUTTON_TEXT">Back</string>
    <string name="DELETE_BUTTON_TEXT">Delete</string>
    <string name="HOME_BUTTON_TEXT">Reset</string>
    <string name="SAVE_BUTTON_TEXT">Save</string>
    <string name="RECORD_BUTTON_TEXT">Record</string>
    <string name="PLAY_BUTTON_TEXT">Play</string>
    <string name="CLOSE_BUTTON_TEXT">Close</string>
    <string name="DEFAULT_CENTER_REAL">0.0</string>
    <string name="DEFAULT_CENTER_IMAGINARY">0.0</string>
    <string name="DEFAULT_EDGE_LENGTH">4.0</string>
    <string name="DEFAULT_ITERATION_LIMIT">64</string>
    <string name="DEFAULT_FPS">20</string>
    <string name="DEFAULT_RECORD_TIME">1</string>
    <string name="DEFAULT_NUM_FRAMES">1</string>
    <string name="LOAD_BUTTON_TEXT">LOAD</string>
    <string name="ImageViewContentDescription">AnimationView</string>

</resources>
